# captchachacha

./: README.md  secret.gpg
capt3cha/: .gitignore  CREDIT.md  Cargo.toml  README.md
capt3cha/peglrs/src/: lib.rs
capt3cha/peglrs/src/camera/: mod.rs
capt3cha/peglrs/src/mesh/: glyph.rs  mod.rs
capt3cha/peglrs/src/scene/: mod.rs
capt3cha/peglrs/src/shaders/: mod.rs  shader_loader.rs
capt3cha/sdl_backend/: Cargo.toml
capt3cha/sdl_backend/src/: main.rs
capt3cha/sdl_backend/src/shaders/: base.fs  base.vs  bill.vs
existancha/: Cargo.toml  README.md
existancha/src/: main.rs
