[package]
name = "sdl_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
peglrs = { path = "../peglrs" }
cgmath = "0.18.0"
rand = "0.8.5"

[dependencies.sdl2]
version = "0.37"
features = ["bundled", "static-link"]
